--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -1,1 +1,23 @@
-{{systemInfo}}
+
+    
+<div cloud></div>
+
+<br/><b>cloud:</b>
+<div style="max-height: 300px; overflow-y: auto" >
+	 {{cloud}}
+</div>
+<!-- 
+
+<b>prodes:</b>
+<div style="max-height: 300px; overflow-y: auto" >
+	 {{prodes}}
+</div>
+<br/><b>consolidado:</b> 
+<div style="max-height: 200px; overflow-y: auto" >
+	{{consolidado}}
+</div>
+<br/><b>diary:</b>
+<div style="max-height: 200px; overflow-y: auto" >
+	 {{diary}}
+</div>
+ -->
