--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,6 +6,38 @@
   border-radius: 0;
 }
 
+.chart{
+  display: inline-block;
+  border-left: 1px solid;
+  border-right: 1px solid;
+  border-bottom: 1px solid; 
+  border-top: 0px solid; 
+  border-color: #DDDDDD;  
+}
+
+.box-header {
+  background-color: #fcfcfc;
+  /* Old browsers */
+
+  background-image: -moz-linear-gradient(top, #fcfcfc, #efefef);
+  /* FF3.6+ */
+
+  background-image: -webkit-linear-gradient(top, #fcfcfc, #efefef);
+  /* Chrome10+,Safari5.1+ */
+
+  background-image: linear-gradient(to bottom, #fcfcfc, #efefef);
+  /* W3C */
+
+  border: 1px solid #DDDDDD;
+  border-radius: 2px 2px 0 0;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  margin-bottom: -1px;
+  overflow: hidden;
+  padding: 1%;
+}
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
