--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -1,11 +1,10 @@
 
     
-<div cloud></div>
-
-<br/><b>cloud:</b>
-<div style="max-height: 300px; overflow-y: auto" >
-	 {{cloud}}
+<div style="heigth: 400px; width: 500px"> 
+	<div class="box-header">NUVEM</div>
+	<cloud></cloud> 
 </div>
+
 <!-- 
 
 <b>prodes:</b>
@@ -21,3 +20,4 @@
 	 {{diary}}
 </div>
  -->
+
