--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,9 +1,20 @@
 #map{
   height: 700px;
 }
+
+#page {
+  margin: 5%;
+  text-align: center;
+}
+
 .navbar{
   margin-bottom: 0;
   border-radius: 0;
+}
+
+.chart-stats{
+  width: 651px;
+  height: 220px;
 }
 
 .chart{
@@ -12,7 +23,8 @@
   border-right: 1px solid;
   border-bottom: 1px solid; 
   border-top: 0px solid; 
-  border-color: #DDDDDD;  
+  border-color: #DDDDDD;
+  margin: 1%;
 }
 
 .box-header {
@@ -33,64 +45,85 @@
   -moz-box-shadow: none;
   -webkit-box-shadow: none;
   box-shadow: none;
-  margin-bottom: -1px;
   overflow: hidden;
   padding: 1%;
+  border-bottom:2px solid #DDDDDD;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
+.box-header h2{
+  color: #646464;
+  font-size: 1.143em;
+  float: left;
+  font-weight: normal;
+  line-height: 16px;
+  margin: 1.5% -100% 0 0;
+  text-shadow: 0 1px 0 #FFFFFF;
 }
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
+
+
+.quick-slct{
+  display: inline-block !important;
+
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+.quick-btn {
+  background-color: #fcfcfc 0%;
+  /* Old browsers */
+
+  background-image: -moz-linear-gradient(top, #fcfcfc 0%, #efefef 100%);
+  /* FF3.6+ */
+
+  background-image: -webkit-linear-gradient(top, #fcfcfc 0%, #efefef 100%);
+  /* Chrome10+,Safari5.1+ */
+
+  background-image: linear-gradient(to bottom, #fcfcfc 0%, #efefef 100%);
+  /* W3C */
+
+  border-top: 1px solid lightgrey;
+  border-left: 1px solid lightgrey;
+  border-radius: 4px 4px 4px 4px;
+  box-shadow: 0 1px 0 0 #ffffff inset, 0 1px 0 rgba(255, 255, 255, 0.4);
+  display: inline-block;
+  line-height: 1%;
+  padding: 0;
+  margin: 1% 1% -1% 1%;
+  max-width: 100%;
 }
+
+/*.item{
+  width: 20%;
+}*/
+
+.quick-btn .item:active {
+  background: #FCFCFC;
+  -moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
+  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.quick-btn .item {
+  border-right: 1px solid lightgrey;
+  border-bottom: 1px solid lightgrey;
+  box-shadow: 1px 1px 0 0 #FFFFFF;
+  font-weight: bold;
+  margin: 0;
+  /*padding: 25px 15px 20px;*/
+  padding: 23px;
+  float: left;
+}
+.quick-btn .item:hover {
+  background: #FCFCFC;
+  text-decoration: none;
+  transition: all 0.2s ease 0s;
+}
+
 
 /* Customize container */
 @media (min-width: 768px) {
   .container {
     max-width: 730px;
   }
-}
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
 }
 
 /* Responsive: Portrait tablets and up */
