Adicionado grafico com dados de soma da visao public_diary do banco, utilizando o restApi para solicitacao dos dados do back-end

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,9 +12,14 @@
   border-radius: 0;
 }
 
+.chart-container{
+  max-width: 651px !important;
+  max-height: 250px !important;
+}
+
 .chart-stats{
   width: 651px;
-  height: 220px;
+  height: 200px;
 }
 
 .chart{
