--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -22,6 +22,10 @@
 	<div class='chart' > 
 		<div class="box-header"><h2>Alerta DETER: Taxa(%) de Nuvens</h2></div>
 		<cloud></cloud> 
+	</div>	
+	<div class='chart' > 
+		<div class="box-header"><h2>Alerta DETER: Índice Mensal</h2></div>
+		<mensal></mensal> 
 	</div>
 
 </div>
