--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -1,22 +1,21 @@
-<div id="page">
+<div id='page'>
 	<form id='form-chart' ng-submit='changeForm(uf, mes, ano)' class='text-center'>
 		    
-		<div class="center">
-			<figure class="quick quick-btn" id="selectMap">
-				<img id="{{ufs.name}}" href="#" class="item"
-				     ng-repeat="ufs in ufs" ng-src="{{ufs.image}}"
-				     value="{{ufs.name}}" ng-model="uf">
+		<div class='center'>
+			<figure class='quick quick-btn' id='selectMap'>
+				<img id='{{ufs.name}}' href='#' class='item'
+				     ng-repeat='ufs in ufs' ng-src='{{ufs.image}}'
+				     value='{{ufs.name}}' ng-model='uf'
+				     class='{{newCLass}}' ng-click='changeClass(this)'>
 			</figure>
 		</div>
 		<br />
 
 
-		<!-- <div style="display: inline-block"> -->
-		<select class='btn btn-default' ng-options='mes for mes in meses' ng-model='mes'></select> 
+		<select class='btn btn-default' ng-options='mes.name for mes in meses' ng-model='mes'></select> 
 		<select class='btn btn-default' ng-options='ano for ano in anos' ng-model='ano'></select> 
 		<button class='btn btn-primary' type='submit'>Pesquisar</button>
 
-		<!-- </div> -->
 	</form>
 	
 	<br />
@@ -24,28 +23,12 @@
 	<br />
 
 	<div class='chart' > 
-		<div class="box-header"><h2>Alerta DETER: Taxa(%) de Nuvens</h2></div>
+		<div class='box-header'><h2>Alerta DETER: Taxa(%) de Nuvens</h2></div>
 		<cloud></cloud> 
 	</div>	
 	<div class='chart' > 
-		<div class="box-header"><h2>Alerta DETER: Índice Mensal</h2></div>
+		<div class='box-header'><h2>Alerta DETER: Índice Mensal</h2></div>
 		<mensal></mensal> 
 	</div>
 
 </div>
-<!-- 
-<b>prodes:</b>
-<div style="max-height: 300px; overflow-y: auto" >
-	 {{prodes}}
-</div>
-<br/><b>consolidado:</b> 
-<div style="max-height: 200px; overflow-y: auto" >
-	{{consolidado}}
-</div>
-<br/><b>diary:</b>
-<div style="max-height: 200px; overflow-y: auto" >
-	 {{diary}}
-</div>
-
-
- -->
