Adicionadas diretivas para visualizacao dos dados da Tabela PRODES com manipulacao dos mesmos para apresentação em graficos

--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -31,4 +31,17 @@
 		<mensal></mensal> 
 	</div>
 
+	<div class='chart' > 
+		<div class='box-header'><h2>Taxa PRODES: Acumulado</h2></div>
+		<prodes></prodes>
+	</div>
+
+
+	<div class='chart' > 
+		<div class='box-header'><h2>Taxa Prodes: UF</h2></div>
+		<prodesuf></prodesuf>
+	</div>
+
+
+
 </div>
