--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,6 +2,11 @@
   height: 700px;
 }
 
+.active{
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15) inset, 0 1px 2px rgba(0, 0, 0, 0.05) !important;
+  background-color: #ffffff !important;
+  }
+
 #page {
   margin: 5%;
   text-align: center;
