--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -97,7 +97,7 @@
   display: inline-block;
   line-height: 1%;
   padding: 0;
-  margin: 1% 1% -1% 1%;
+  /*margin: 1% 1% -1% 1%;*/
   max-width: 100%;
 }
 
@@ -118,14 +118,25 @@
   box-shadow: 1px 1px 0 0 #FFFFFF;
   font-weight: bold;
   margin: 0;
-  /*padding: 25px 15px 20px;*/
-  padding: 23px;
+  padding: 25px 15px 20px;
+  /*padding: 23px;*/
   float: left;
 }
+
 .quick-btn .item:hover {
   background: #FCFCFC;
   text-decoration: none;
   transition: all 0.2s ease 0s;
+}
+
+
+.quick-btn .item span {
+    bottom: -10px;
+    color: #333333;
+    display: block;
+    font-size: 12px;
+    font-weight: bold;
+    position: relative;
 }
 
 
