--- a/app/views/partials/topbar.html
+++ b/app/views/partials/topbar.html
@@ -1,13 +1,82 @@
-<nav class="navbar navbar-inverse">
+<!-- <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#/">{{SystemName}}</a>
+      <ul class="nav navbar-nav">
+        <li class="navbar-brand"href="#/">Painel de Desmatamento</li>
+      </ul>
     </div>
     <div class="collapse navbar-collapse" >
       <ul class="nav navbar-nav">
-        <li class="{{active}}"><a href="#/">Mapa</span></a></li>
-        <li class="{{active}}"><a href="#/consultar">Estatísticas</a></li>
+        <li ng-class="{active : mapView}">
+          <a href="#/">Mapa</span>
+            <span class='glyphicon glyphicon-globe'></span>
+          </a>
+        </li>
+        <li ng-class="{active : !mapView}">
+          <a href="#/consultar">Estatísticas
+            <span class='glyphicon glyphicon-stats'></span>
+          </a>
+        </li>
       </ul>
+
+        <div class="nav navbar-nav navbar-right" ng-if='!logged'>
+            <li class=''><a href='' data-toggle="modal" data-target="#loginModal"><i class='glyphicon glyphicon-user'></i> Login</a></li>
+        </div>
+        
+        <div class="nav navbar-nav navbar-right" ng-if='logged'>
+          <li class="dropdown">
+            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class='glyphicon glyphicon-user'></i>  {{dataUser.userName}} <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="" ng-click='logout()'>Logout</a></li>
+            </ul>
+          </li>
+        </div>
+
+
+    </div>
+  </div>
+</nav> -->
+
+
+
+<nav class='navbar navbar-inverse navbar-collapse navbar-fixed'>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse"
+         data-target="#navbar-collapse">
+        <!-- <span class='glyphicon glyphicon-menu-down'></span> -->
+        <!-- <span class="sr-only">Toggle navigation</span> -->
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <ul class="nav navbar-nav">
+        <li class="navbar-brand" href="#/" >Painel de Desmatamento</li>
+      </ul>
+    </div>
+    <div class="collapse navbar-collapse" id="navbar-collapse">
+        <div class="nav navbar-nav">
+            <li ng-class='{active: mapView}'><a href='#/'><i class='glyphicon glyphicon-globe'></i> Mapa</a></li>
+            <li ng-class='{active: !mapView}'><a href='#/consultar'><i class='glyphicon glyphicon-signal'></i> Estatística</a></li>
+        </div>        
+        <div class="nav navbar-nav navbar-right" ng-if='!logged'>
+            <li class=''><a href='' data-toggle="modal" data-target="#loginModal"><i class='glyphicon glyphicon-user'></i> Login</a></li>
+        </div>
+        <div class="nav navbar-nav navbar-right" ng-if='logged'>
+          <li class="dropdown">
+            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class='glyphicon glyphicon-user'></i>  {{dataUser.userName}} <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="" ng-click='logout()'>Logout</a></li>
+            </ul>
+          </li>
+
+        </div>
     </div>
   </div>
 </nav>
+
+
+
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <login></login>
+</div>
