--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,23 +13,52 @@
   text-align: center;
 }
 
+.message {
+  margin: 0 20% 20px;
+  text-align: left;
+}
+
+.filter-select {
+  display:inline-flex;
+}
+
+.div-select {
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+}
+
+.button-select {
+  margin-top: 1.7em;
+  margin-left: 2em
+}
+
 .navbar{
   margin-bottom: 0;
   border-radius: 0;
 }
 
+.chart-div {
+  text-align: left;
+}
+
 .chart-container{
-  max-width: 605px !important;
-  max-height: 270px !important;
+/*  max-width: 585px !important;
+  height: 251px !important;*/
 }
 
 .chart-stats{
-  width: 631px;
-  height: 230px;
+  width: 100% !important;
+  /*max-width: 585px;*/
+  max-height: 201px !important;
+  margin: 10px 10px 0px 10px;
 }
 
-.chart{
-  display: inline-block;
+.chart-small {
+  width: 288px;
+}
+
+/*.chart-box{
+  display: inline-table;
   border-left: 1px solid;
   border-right: 1px solid;
   border-bottom: 1px solid; 
@@ -37,8 +66,63 @@
   border-color: #DDDDDD;
   margin: 1%;
 }
+*/
+.panel-default {
+  display: inline-table;
+  padding-bottom: 10px;
+  padding-top: 10px;
 
-.box-header {
+  /*margin: 1%;*/
+  /*padding: 0em;*/
+}
+
+/*.box-header {
+  background-color: #fcfcfc;
+
+  background-image: -moz-linear-gradient(top, #fcfcfc, #efefef);
+
+  background-image: -webkit-linear-gradient(top, #fcfcfc, #efefef);
+
+  background-image: linear-gradient(to bottom, #fcfcfc, #efefef);
+
+  border: 1px solid #DDDDDD;
+  border-radius: 1px 1px 0 0;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  overflow: hidden;
+  padding: 0.1em;
+  border-bottom:1px solid #DDDDDD;
+  border-left:0px;
+  border-right:0px;
+  height: 39px;
+}*/
+
+.box-header h2{
+  color: #646464;
+  font-size: 1.143em;
+  /*float: left;*/
+  font-weight: normal;
+  line-height: 16px;
+  margin: 0.1em 0 0.2em 0.2em;
+  text-shadow: 0 1px 0 #FFFFFF;
+  min-height: 1.2em;
+  /*display: -moz-box;*/
+}
+
+.header-left {
+  display:inline-flex;
+  float:left;
+}
+
+.header-right {
+  display:inline-flex;
+  float:right;
+}
+
+.panel-heading {
+  padding: 0.5em 0.3em 0.5em 0.3em;
+
   background-color: #fcfcfc;
   /* Old browsers */
 
@@ -52,26 +136,42 @@
   /* W3C */
 
   border: 1px solid #DDDDDD;
-  border-radius: 2px 2px 0 0;
+  border-radius: 1px 1px 0 0;
   -moz-box-shadow: none;
   -webkit-box-shadow: none;
   box-shadow: none;
   overflow: hidden;
-  padding: 1%;
-  border-bottom:2px solid #DDDDDD;
+  /*padding: 0.1em;*/
+  border-bottom:1px solid #DDDDDD;
+  border-left: 1px solid;
+  border-right: 1px solid;
 }
 
-.box-header h2{
-  color: #646464;
-  font-size: 1.143em;
-  float: left;
-  font-weight: normal;
-  line-height: 16px;
-  margin: 1.5% -100% 0 0;
-  text-shadow: 0 1px 0 #FFFFFF;
+.panel-body {
+  border-bottom: 1px solid; 
+  border-left: 1px solid;
+  border-right: 1px solid;
+  border-color: #DDDDDD;
+  min-height: 288px;  
 }
 
+.panel-heading .break {
+  border-left: 1px solid #FCFCFC;
+  border-right: 1px solid #DDDDDD;
+  margin: -12px 3px -10px 2px;
+  padding: 12px 0;
+}
 
+.panel-heading .head-title {
+  padding-top: 0.4em;
+  display:inline-block;
+  padding-left: 7px;
+  /*overflow: hidden;*/
+}
+
+.header-left .btn-group {
+  display: inline-flex;
+}
 
 .quick-slct{
   display: inline-block !important;
@@ -80,7 +180,7 @@
 
 .quick-btn {
   background-color: #fcfcfc 0%;
-  /* Old browsers */
+  /* Old browsers 
 
   background-image: -moz-linear-gradient(top, #fcfcfc 0%, #efefef 100%);
   /* FF3.6+ */
@@ -122,6 +222,7 @@
   padding: 25px 15px 20px;
   /*padding: 23px;*/
   float: left;
+  min-height: 92px;
 }
 
 .quick-btn .item:hover {
