--- a/app/views/partials/barChart.html
+++ b/app/views/partials/barChart.html
@@ -29,7 +29,7 @@
 				<button class="btn btn-default glyphicon glyphicon-plus"></button>
 				<button class="btn btn-default glyphicon glyphicon-minus"></button>
 			</div>
-			<span class="break" ng-if="addBut"></span>
+			<span class="break" ng-if="addBut || nextPrevBut"></span>
 			<div class="head-title">{{name}}</div>
 		</div>
 		<div class="btn-group btn-group-sm header-right" ng-if="optionBut">
