adding some funcionatilies from graph 2 as well as the full coverage of types for graph 1

--- a/app/views/partials/lineChart.html
+++ b/app/views/partials/lineChart.html
@@ -1,4 +1,4 @@
-<div class="{{sizeClass}} panel-default">
+<div class="{{sizeClass}} panel-default chart-default">
 	<div class="panel-heading">
 <!-- 		<h2>
 			<div class="header-left">
