--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -27,7 +27,9 @@
 			</div>
  			<div class="form-group div-select">
 	 			<label> Estagio</label>
-				<select class='btn btn-default form-control' ng-options='estagio.name for estagio in estagios' ng-model='estagio'></select> 
+				<select class='btn btn-default form-control' ng-model="estagio">
+					<option ng-repeat="estagio in estagios | filter: {type: tipo.value}" ng-selected="{{$first}}">{{estagio.name}}</option>
+				</select> 
 			</div>
  			<div class="form-group">
 				<button class='btn btn-primary form-control button-select' type='submit'>Pesquisar</button>	
@@ -65,7 +67,8 @@
 			add-but="true" 
 			option-but='true'
 			legend='true'
-			vertical-lines='"false"'>
+			vertical-lines='"false"'
+			loading='loadingChart2'>
 		</line-chart>
 
 		<bar-chart 
