--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -27,8 +27,8 @@
 			</div>
  			<div class="form-group div-select">
 	 			<label> Estagio</label>
-				<select class='btn btn-default form-control' ng-model="estagio">
-					<option ng-repeat="estagio in estagios | filter: {type: tipo.value}" ng-selected="{{$first}}">{{estagio.name}}</option>
+				<select class='btn btn-default form-control' ng-model="estagio" ng-options="estagio.name for estagio in estagios | filter: {type: tipo.value}">
+					<!-- <option ng-repeat="estagio in estagios | filter: {type: tipo.value}" ng-selected="{{$first}}">{{estagio.name}}</option> -->
 				</select> 
 			</div>
  			<div class="form-group">
@@ -54,7 +54,7 @@
 
 	<div class="col-lg-12 chart-div">
 		<line-chart 
-			name='"Alerta DETER: Índice Diário [" + mes.name + "]"' 
+			name='chart1Title' 
 			data="lineChart1"
 			option-but='true'
 			legend='false'
@@ -62,7 +62,7 @@
 		</line-chart>
 
 		<line-chart 
-			name='"Alerta DETER: Índice Mensal (em Km²)"' 
+			name='chart2Title' 
 			data="lineChart2" 
 			add-but="true" 
 			option-but='true'
@@ -80,7 +80,7 @@
 		</stacked-bar-chart> -->
 
 		<bar-chart
-			name='"Alerta DETER: Índice Períodos"' 
+			name='chart3Title' 
 			data="barChart1" 
 			add-but="true"
 			option-but='true'
@@ -88,7 +88,7 @@
 		</bar-chart> 
 
 		<bar-chart 
-			name='"Alerta DETER: UFs"' 
+			name='chart4Title' 
 			data="barChart2" 
 			add-but="true"
 			option-but='true'
@@ -96,7 +96,7 @@
 		</bar-chart>
 
 		<line-chart 
-			name='"Taxa PRODES|Alerta DETER: Acumulado Períodos"' 
+			name='chart5Title' 
 			data="lineChart3" 
 			option-but='true'
 			legend='true'>
