--- a/app/views/partials/lineChart.html
+++ b/app/views/partials/lineChart.html
@@ -26,8 +26,8 @@
 				<button class="btn btn-default glyphicon glyphicon-arrow-right"></button>
 			</div>
 			<div class="btn-group btn-group-sm" ng-if="addBut">
-				<button class="btn btn-default glyphicon glyphicon-plus"></button>
-				<button class="btn btn-default glyphicon glyphicon-minus"></button>
+				<button class="btn btn-default glyphicon glyphicon-plus" ng-click="object.addSeries(object)"></button>
+				<button class="btn btn-default glyphicon glyphicon-minus" ng-click="object.removeSeries(object)"></button>
 			</div>
 			<span class="break" ng-if="addBut || nextPrevBut"></span>
 			<div class="head-title">{{name}}</div>
