--- a/app/views/partials/barChart.html
+++ b/app/views/partials/barChart.html
@@ -22,12 +22,12 @@
 		</h2> -->
 		<div class="header-left">
 			<div class="btn-group btn-group-sm" ng-if="nextPrevBut">
-				<button class="btn btn-default glyphicon glyphicon-arrow-left"></button>
-				<button class="btn btn-default glyphicon glyphicon-arrow-right"></button>
+				<button class="btn btn-default glyphicon glyphicon-arrow-left" ng-click="object.leftSeries(object)"></button>
+				<button class="btn btn-default glyphicon glyphicon-arrow-right" ng-click="object.rightSeries(object)"></button>
 			</div>
 			<div class="btn-group btn-group-sm" ng-if="addBut">
 				<button class="btn btn-default glyphicon glyphicon-plus" ng-click="object.addSeries(object)"></button>
-				<button class="btn btn-default glyphicon glyphicon-minus" ng-click="object.removeSeries(object)"></button>
+				<button class="btn btn-default glyphicon glyphicon-minus" ng-click="object.removeSeries(object)" ng-disabled="!object.restOptions.frequencia"></button>
 			</div>
 			<span class="break" ng-if="addBut || nextPrevBut"></span>
 			<div class="head-title">{{name}}</div>
