--- a/app/views/partials/lineChart.html
+++ b/app/views/partials/lineChart.html
@@ -22,21 +22,32 @@
 		</h2> -->
 		<div class="header-left">
 			<div class="btn-group btn-group-sm" ng-if="nextPrevBut">
-				<button class="btn btn-default glyphicon glyphicon-arrow-left"></button>
-				<button class="btn btn-default glyphicon glyphicon-arrow-right"></button>
+				<button class="btn btn-default glyphicon glyphicon-arrow-left" ng-click="object.leftSeries(object)"></button>
+				<button class="btn btn-default glyphicon glyphicon-arrow-right" ng-click="object.rightSeries(object)"></button>
 			</div>
 			<div class="btn-group btn-group-sm" ng-if="addBut">
 				<button class="btn btn-default glyphicon glyphicon-plus" ng-click="object.addSeries(object)"></button>
-				<button class="btn btn-default glyphicon glyphicon-minus" ng-click="object.removeSeries(object)"></button>
+				<button class="btn btn-default glyphicon glyphicon-minus" ng-click="object.removeSeries(object)" ng-disabled="!object.restOptions.frequencia"></button>
 			</div>
 			<span class="break" ng-if="addBut || nextPrevBut"></span>
 			<div class="head-title">{{name}}</div>
 		</div>
 		<div class="btn-group btn-group-sm header-right" ng-if="optionBut">
-			<button class="btn btn-default glyphicon glyphicon-list-alt"></button>
+			<button class="btn btn-default glyphicon glyphicon-list-alt" ng-click="showTable()"></button>
 			<button class="btn btn-default glyphicon glyphicon-download-alt"></button>
 			<button class="btn btn-default glyphicon glyphicon-chevron-up"></button>
 			<button class="btn btn-default glyphicon glyphicon-resize-full"></button>
+			
+			<!-- <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				Action <span class="caret"></span>
+			</button>
+			<ul class="dropdown-menu">
+				<li><a href="#">Action</a></li>
+				<li><a href="#">Another action</a></li>
+				<li><a href="#">Something else here</a></li>
+				<li role="separator" class="divider"></li>
+				<li><a href="#">Separated link</a></li>
+			</ul> -->
 		</div>
 	</div>
 	<div class="panel-body">
