--- a/app/views/partials/stackedBarChart.html
+++ b/app/views/partials/stackedBarChart.html
@@ -22,12 +22,12 @@
 		</h2> -->
 		<div class="header-left">
 			<div class="btn-group btn-group-sm" ng-if="nextPrevBut">
-				<button class="btn btn-default glyphicon glyphicon-arrow-left"></button>
-				<button class="btn btn-default glyphicon glyphicon-arrow-right"></button>
+				<button class="btn btn-default glyphicon glyphicon-arrow-left" ng-click="object.leftSeries(object)"></button>
+				<button class="btn btn-default glyphicon glyphicon-arrow-right" ng-click="object.rightSeries(object)"></button>
 			</div>
 			<div class="btn-group btn-group-sm" ng-if="addBut">
-				<button class="btn btn-default glyphicon glyphicon-plus"></button>
-				<button class="btn btn-default glyphicon glyphicon-minus"></button>
+				<button class="btn btn-default glyphicon glyphicon-plus" ng-click="object.addSeries(object)"></button>
+				<button class="btn btn-default glyphicon glyphicon-minus" ng-click="object.removeSeries(object)" ng-disabled="!object.restOptions.frequencia"></button>
 			</div>
 			<span class="break" ng-if="addBut || nextPrevBut"></span>
 			<div class="head-title">{{name}}</div>
@@ -41,7 +41,7 @@
 	</div>
 	<div class="panel-body">
 		<spinner ng-if="loading"></spinner>
-		<canvas class="chart chart-base chart-stats" chart-type="StackedBar" data='dat' labels='lab'>
-		</canvas>
+		<!-- <canvas class="chart chart-base" chart-type="StackedBar" data='dat' labels='lab' width="523" height="261" style="width: 523px; height: 261px;"> </canvas>-->				
+		<canvas class="chart chart-base chart-stats" chart-labels="lab" chart-data="dat" chart-type="type" ng-if="!loading" chart-series='ser' chart-legend='{{legend}}' chart-options="options" ></canvas>
 	</div>
 </div>
