--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -147,7 +147,7 @@
 			legend="true"
 			loading='chart8.loading'
 			object='chart8'
-			ng-show="showPie1">
+			ng-if="chart8.showPie">
 		</pie-chart>
 
 		<pie-chart 
@@ -157,7 +157,7 @@
 			size='"small"'
 			legend="true"
 			loading='chart9.loading'
-			ng-show="showPie2">
+			ng-if="chart9.showPie">
 		</pie-chart>
 	</div>
 
