--- a/app/views/partials/stackedBarChart.html
+++ b/app/views/partials/stackedBarChart.html
@@ -33,15 +33,19 @@
 			<div class="head-title">{{name}}</div>
 		</div>
 		<div class="btn-group btn-group-sm header-right" ng-if="optionBut">
-			<button class="btn btn-default glyphicon glyphicon-list-alt"></button>
+			<button class="btn btn-default glyphicon glyphicon-list-alt" ng-click="toggleTable()"></button>
 			<button class="btn btn-default glyphicon glyphicon-download-alt"></button>
 			<button class="btn btn-default glyphicon glyphicon-chevron-up"></button>
 			<button class="btn btn-default glyphicon glyphicon-resize-full"></button>
 		</div>
 	</div>
-	<div class="panel-body">
-		<spinner ng-if="loading"></spinner>
-		<!-- <canvas class="chart chart-base" chart-type="StackedBar" data='dat' labels='lab' width="523" height="261" style="width: 523px; height: 261px;"> </canvas>-->				
-		<canvas class="chart chart-base chart-stats" chart-labels="lab" chart-data="dat" chart-type="type" ng-if="!loading" chart-series='ser' chart-legend='{{legend}}' chart-options="options" ></canvas>
+	<div class="panel-body" ng-if="loading">
+		<spinner></spinner>
 	</div>
+	<div class="panel-body" ng-if='!table && !loading'>			
+		<canvas class="chart chart-base chart-stats" chart-labels="lab" chart-data="dat" chart-type="type" chart-series='ser' chart-legend='{{legend}}' chart-options="options" ></canvas>
+	</div>
+	<div class="panel-body" ng-if='table && !loading'>
+		<table-chart series='ser' labels='lab' data='dat'></table-chart>
+	</div>	
 </div>
