--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -28,7 +28,6 @@
  			<div class="form-group div-select">
 	 			<label> Estagio</label>
 				<select class='btn btn-default form-control' ng-model="estagio" ng-options="estagio.name for estagio in estagios | filter: {type: tipo.value}" ng-change='evaluateStage(estagio.value, tipo.value)'>
-					<!-- <option ng-repeat="estagio in estagios | filter: {type: tipo.value}" ng-selected="{{$first}}">{{estagio.name}}</option> -->
 				</select> 
 			</div>
  			<div class="form-group">
@@ -44,7 +43,6 @@
 					<img id='{{ufs.name}}' href='#' ng-src='{{ufs.image}}' value='{{ufs.name}}'>
 					<span class=''>{{ufs.subtitle}}</span>
 				</a>
-				
  			</figure>
 		</div>
 
@@ -52,14 +50,15 @@
 	
 	<hr />
 
-	<div class="col-lg-12 chart-div">
+	<div class="col-sm-12 chart-div">
 		<line-chart 
 			id="chart1"
 			name='chart1.title' 
 			data="chart1.data"
 			option-but='true'
 			legend='false'
-			loading='chart1.loading'>
+			loading='chart1.loading'
+			object='chart1'>
 		</line-chart>
 
 		<line-chart 
@@ -74,7 +73,6 @@
 			object='chart2'>
 		</line-chart>
 
-		<!-- TODO: MAKE STACKED BAR TO WORK -->
 		<stacked-bar-chart
 			id="chart3"
 			name='chart3.title' 
@@ -85,23 +83,9 @@
 			loading='chart3.loading'
 			object='chart3'>
 		</stacked-bar-chart>
-<!-- 
-		<div ng-controller="StackedBarCtrl">
-			<div class="chart-container">
-				<canvas class="chart chart-base" labels="labels" data="data" chart-type="type" width="523" height="261" style="width: 523px; height: 261px;"></canvas>
-			</div>
-		</div> -->
-<!--  
-		<bar-chart
-			name='chart3.title' 
-			data="chart3.data" 
-			add-but="true"
-			option-but='true'
-			loading='chart3.loading'
-			object='chart3'>
-		</bar-chart>  -->
 
 		<bar-chart 
+			id="chart4"
 			name='chart4.title' 
 			data="chart4.data" 
 			add-but="true"
@@ -111,14 +95,17 @@
 		</bar-chart>
 
 		<line-chart 
+			id="chart5"
 			name='chart5.title' 
 			data="chart5.data" 
 			option-but='true'
 			legend='true'
-			loading='chart5.loading'>
+			loading='chart5.loading'
+			object='chart5'>
 		</line-chart>
 
 		<bar-chart 
+			id="chart6"
 			name='chart6.title' 
 			data="chart6.data" 
 			next-prev-but="true"
@@ -129,6 +116,7 @@
 		</bar-chart>
 
 		<line-chart 
+			id="chart7"
 			name='chart7.title' 
 			data="chart7.data" 
 			add-but="true" 
@@ -139,6 +127,7 @@
 		</line-chart>
 
 		<pie-chart 
+			id="chart8"
 			name='chart8.title' 
 			data="chart8.data" 
 			next-prev-but="true" 
@@ -151,6 +140,7 @@
 		</pie-chart>
 
 		<pie-chart 
+			id="chart9"
 			name='chart9.title' 
 			data="chart9.data" 
 			option-but='true'
@@ -160,33 +150,5 @@
 			ng-if="chart9.showPie">
 		</pie-chart>
 	</div>
-
-<!-- 
-	<div class='chart' id="chart_1"> 
-		<div class='box-header'><h2>Alerta DETER: Índice Mensal (em Km²) </h2></div>
-		<mensal></mensal> 
-	</div>
-
-	<div class='chart' > 
-		<div class='box-header'><h2>Alerta DETER: UF's (em Km²)</h2></div>
-		<deterufs></deterufs>
-	</div>
-	
-
-	<div class='chart' > 
-		<div class='box-header'><h2>Taxa PRODES: Acumulado (em Km²)</h2></div>
-		<prodes></prodes>
-	</div>
-
-	<div class='chart' > 
-		<div class='box-header'><h2>Taxa Prodes: UF's (em Km²)</h2></div>
-		<prodesuf></prodesuf>
-	</div>	
-
-	<div class='chart' > 
-		<div class='box-header'><h2>Alerta DETER: Taxa(%) de Nuvens</h2></div>
-		<cloud></cloud> 
-	</div>	 -->
-
 </div>
 
