--- a/app/views/partials/lineChart.html
+++ b/app/views/partials/lineChart.html
@@ -1,25 +1,5 @@
 <div class="{{sizeClass}} panel-default chart-default">
 	<div class="panel-heading">
-<!-- 		<h2>
-			<div class="header-left">
-				<div class="btn-group btn-group-sm" ng-if="nextPrevBut">
-					<button class="btn btn-default glyphicon glyphicon-arrow-left"></button>
-					<button class="btn btn-default glyphicon glyphicon-arrow-right"></button>
-				</div>
-				<div class="btn-group btn-group-sm" ng-if="addBut">
-					<button class="btn btn-default glyphicon glyphicon-plus"></button>
-					<button class="btn btn-default glyphicon glyphicon-minus"></button>
-				</div>
-				<span class="break" ng-if="addBut"></span>
-				<div class="head-title">{{name}}</div>
-			</div>
-			<div class="btn-group btn-group-sm header-right" ng-if="optionBut">
-				<button class="btn btn-default glyphicon glyphicon-list-alt"></button>
-				<button class="btn btn-default glyphicon glyphicon-download-alt"></button>
-				<button class="btn btn-default glyphicon glyphicon-chevron-up"></button>
-				<button class="btn btn-default glyphicon glyphicon-resize-full"></button>
-			</div>
-		</h2> -->
 		<div class="header-left">
 			<div class="btn-group btn-group-sm" ng-if="nextPrevBut">
 				<button class="btn btn-default glyphicon glyphicon-arrow-left" ng-click="object.leftSeries(object)"></button>
@@ -37,17 +17,6 @@
 			<button class="btn btn-default glyphicon glyphicon-download-alt"></button>
 			<button class="btn btn-default glyphicon glyphicon-chevron-up"></button>
 			<button class="btn btn-default glyphicon glyphicon-resize-full"></button>
-			
-			<!-- <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				Action <span class="caret"></span>
-			</button>
-			<ul class="dropdown-menu">
-				<li><a href="#">Action</a></li>
-				<li><a href="#">Another action</a></li>
-				<li><a href="#">Something else here</a></li>
-				<li role="separator" class="divider"></li>
-				<li><a href="#">Separated link</a></li>
-			</ul> -->
 		</div>
 	</div>
 	<div class="panel-body" ng-if="loading">
@@ -57,7 +26,7 @@
 		<canvas class="chart-line chart-stats" chart-data='dat' chart-labels='lab' chart-series='ser' chart-legend='{{legend}}' chart-options="options">
 		</canvas>
 	</div>
-	<div class="panel-body table-default" ng-if='table && !loading'>
+	<div class="panel-body table-default col-sm-12" ng-if='table && !loading'>
 		<table-chart series='ser' labels='lab' data='dat'></table-chart>
 	</div>
 <!-- 	<div class="panel-body table-default" ng-if='table && !loading'>
