--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -156,6 +156,7 @@
   border-bottom:1px solid #DDDDDD;
   border-left: 1px solid;
   border-right: 1px solid;
+  min-height: 72px;
 }
 
 .panel-body {
