adding ldap authentication

--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -58,7 +58,8 @@
 			option-but='true'
 			legend='false'
 			loading='chart1.loading'
-			object='chart1'>
+			object='chart1'
+			label='"Dia"'>
 		</line-chart>
 
 		<line-chart 
@@ -70,7 +71,8 @@
 			legend='true'
 			vertical-lines='"false"'
 			loading='chart2.loading'
-			object='chart2'>
+			object='chart2'
+			label='"Mês"'>
 		</line-chart>
 
 		<stacked-bar-chart
@@ -81,7 +83,8 @@
 			option-but='true'
 			legend='true'
 			loading='chart3.loading'
-			object='chart3'>
+			object='chart3'
+			label='"Período"'>
 		</stacked-bar-chart>
 
 		<bar-chart 
@@ -90,8 +93,10 @@
 			data="chart4.data" 
 			add-but="true"
 			option-but='true'
+			legend='true'
 			loading='chart4.loading'
-			object='chart4'>
+			object='chart4'
+			label='"Estado"'>
 		</bar-chart>
 
 		<line-chart 
@@ -101,7 +106,8 @@
 			option-but='true'
 			legend='true'
 			loading='chart5.loading'
-			object='chart5'>
+			object='chart5'
+			label='"Período"'>
 		</line-chart>
 
 		<bar-chart 
@@ -112,7 +118,8 @@
 			option-but='true'
 			loading='chart6.loading'
 			legend="true"
-			object="chart6">
+			object="chart6"
+			label='"Estado"'>
 		</bar-chart>
 
 		<line-chart 
@@ -123,7 +130,8 @@
 			option-but='true'
 			legend="true"
 			loading='chart7.loading'
-			object='chart7'>
+			object='chart7'
+			label='"Mês"'>
 		</line-chart>
 
 		<pie-chart 
