--- a/app/views/partials/stackedBarChart.html
+++ b/app/views/partials/stackedBarChart.html
@@ -25,6 +25,6 @@
 		<canvas class="chart chart-base chart-stats" chart-labels="lab" chart-data="dat" chart-type="type" chart-series='ser' chart-legend='{{legend}}' chart-options="options" chart-colours="colors"></canvas>
 	</div>
 	<div class="panel-body" ng-if='table && !loading'>
-		<table-chart series='ser' labels='lab' data='dat'></table-chart>
+		<table-chart series='ser' labels='lab' data='dat' label="label"></table-chart>
 	</div>	
 </div>
