--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -29,7 +29,7 @@
 
 .button-select {
   margin-top: 1.7em;
-  margin-left: 2em
+  margin-left: 2em;
 }
 
 .navbar{
@@ -164,7 +164,7 @@
   border-left: 1px solid;
   border-right: 1px solid;
   border-color: #DDDDDD;
-  height: 288px;  
+  height: 288px;
 }
 
 .panel-heading .break {
@@ -294,6 +294,7 @@
   font-size: smaller;
   cursor: default;
 }
+
 .stackedbar-legend li span {
   display: block;
   position: absolute;
@@ -303,6 +304,7 @@
   height: 20px;
   border-radius: 5px;
 }
+
 .stackedbar-legend {
   list-style-type: none;
   margin-top: 5px;
