--- a/app/views/partials/barChart.html
+++ b/app/views/partials/barChart.html
@@ -26,6 +26,6 @@
 		</canvas>
 	</div>
 	<div class="panel-body table-default" ng-if='table && !loading'>
-		<table-chart series='ser' labels='lab' data='dat'></table-chart>
+		<table-chart series='ser' labels='lab' data='dat' label="label"></table-chart>
 	</div>
 </div>
