--- a/app/views/partials/lineChart.html
+++ b/app/views/partials/lineChart.html
@@ -26,7 +26,7 @@
 		</canvas>
 	</div>
 	<div class="panel-body table-default col-sm-12" ng-if='table && !loading'>
-		<table-chart series='ser' labels='lab' data='dat'></table-chart>
+		<table-chart series='ser' labels='lab' data='dat' label="label"></table-chart>
 	</div>
 <!-- 	<div class="panel-body table-default" ng-if='table && !loading'>
 		<table class="table table-condensed">
