--- a/app/views/partials/pieChart.html
+++ b/app/views/partials/pieChart.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="btn-group btn-group-sm header-right" ng-if="optionBut">
 			<button class="btn btn-default glyphicon glyphicon-list-alt" ng-click="toggleTable()"></button>
-			<button class="btn btn-default glyphicon glyphicon-download-alt"></button>
+			<button class="btn btn-default glyphicon glyphicon-download-alt" ng-csv="formatCsv(dat, lab)" csv-header="formatHeader(ser)" filename="{{formatName(name)}}"></button>
 			<button class="btn btn-default glyphicon glyphicon-resize-full"></button>
 		</div>
 	</div>
@@ -26,6 +26,6 @@
 		</canvas>
 	</div>
 	<div class="panel-body table-default" ng-if='table && !loading'>
-		<table-chart series='ser' labels='lab' data='[dat]'></table-chart>
+		<table-chart series='ser' labels='lab' data='[dat]' label='label'></table-chart>
 	</div>
 </div>
