--- a/app/views/partials/topbar.html
+++ b/app/views/partials/topbar.html
@@ -59,12 +59,12 @@
             <li ng-class='{active: mapView}'><a href='#/'><i class='glyphicon glyphicon-globe'></i> Mapa</a></li>
             <li ng-class='{active: !mapView}'><a href='#/consultar'><i class='glyphicon glyphicon-signal'></i> Estatística</a></li>
         </div>        
-        <div class="nav navbar-nav navbar-right" ng-if='!logged'>
+        <div class="nav navbar-nav navbar-right" ng-if='!user_data'>
             <li class=''><a href='' data-toggle="modal" data-target="#loginModal"><i class='glyphicon glyphicon-user'></i> Login</a></li>
         </div>
-        <div class="nav navbar-nav navbar-right" ng-if='logged'>
+        <div class="nav navbar-nav navbar-right" ng-if='user_data'>
           <li class="dropdown">
-            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class='glyphicon glyphicon-user'></i>  {{dataUser.userName}} <span class="caret"></span></a>
+            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class='glyphicon glyphicon-user'></i> {{user_data.name}} <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="" ng-click='logout()'>Logout</a></li>
             </ul>
