removing map tab and putting estatisticas tab on page load

--- a/app/views/partials/topbar.html
+++ b/app/views/partials/topbar.html
@@ -56,7 +56,7 @@
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapse">
         <div class="nav navbar-nav">
-            <li ng-class='{active: mapView}'><a href='#/'><i class='glyphicon glyphicon-globe'></i> Mapa</a></li>
+            <!-- <li ng-class='{active: mapView}'><a href='#/'><i class='glyphicon glyphicon-globe'></i> Mapa</a></li> -->
             <li ng-class='{active: !mapView}'><a href='#/consultar'><i class='glyphicon glyphicon-signal'></i> Estatística</a></li>
         </div>        
         <div class="nav navbar-nav navbar-right" ng-if='!user_data'>
