--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -154,8 +154,8 @@
   overflow: hidden;
   /*padding: 0.1em;*/
   border-bottom:1px solid #DDDDDD;
-  border-left: 1px solid;
-  border-right: 1px solid;
+  border-left: 1px solid #DDDDDD;
+  border-right: 1px solid #DDDDDD;
   min-height: 72px;
 
   border-top-right-radius: 4px;
@@ -175,7 +175,7 @@
 .gauge-footer {
   /*padding: 0.5em 0.3em 0.5em 0.3em;*/
 
-  background-color: #fcfcfc;111111111111a1a11111111111111111111111111111111
+  background-color: #fcfcfc;
   background-image: -moz-linear-gradient(top, #fcfcfc, #efefef);
   background-image: -webkit-linear-gradient(top, #fcfcfc, #efefef);
   background-image: linear-gradient(to bottom, #fcfcfc, #efefef);
@@ -202,6 +202,35 @@
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
 }
+
+.panel-maximize {
+  /*height: 762px;*/
+  /*width: 1295px;*/
+  height: 97.44%;
+  max-height: 97.44%;
+  /*width: 89.93%;*/
+  width: 85.93%;
+  /*margin: 20px;*/
+  overflow-y: auto;
+}
+
+.modal-dialog.panel-maximize {
+  margin-top: 0.72%;
+  margin-bottom: 0.72%;
+/*  margin-left: 5.4%;
+  margin-right: 5.4%;*/
+  margin-left: 7.01%;
+  margin-right: 7.01%;
+}
+
+.modal-open .modal {
+  overflow-y: scroll;
+}
+
+/*.modal-table {
+  max-height: 50.44%;
+  overflow-y: auto;
+}*/
 
 .panel-heading .break {
   border-left: 1px solid #FCFCFC;
