removing old files and configs

--- a/app/views/partials/lineChart.html
+++ b/app/views/partials/lineChart.html
@@ -57,8 +57,13 @@
 				</div>
 				<div class="panel modal-table" ng-if='table'>
 					<table-chart series='serModal' labels='labModal' data='datModal' label="label"></table-chart>
-				</div>				
+				</div>	
+
+<!-- 				<expand-chart data='line' name='name' add-but='addBut' next-prev-but='nextPrevBut' option-but='optionBut' legend='legend' vertical-lines='verticalLines' loading='loading' object='object' label='label' options='options' colors='colors' maximize='maximize'>
+				</expand-chart>			 -->
 			</div>
 		</div>
 	</div>
+	
+
 </div>
