finish adding new tab of map, showing data from filtered deter and adding as a new layer on the map

--- a/app/views/partials/topbar.html
+++ b/app/views/partials/topbar.html
@@ -56,8 +56,8 @@
     </div>
     <div class="collapse navbar-collapse" id="navbar-collapse">
         <div class="nav navbar-nav">
-            <!-- <li ng-class='{active: mapView}'><a href='#/'><i class='glyphicon glyphicon-globe'></i> Mapa</a></li> -->
-            <li ng-class='{active: !mapView}'><a href='#/consultar'><i class='glyphicon glyphicon-signal'></i> Estatística</a></li>
+            <li ng-class='{active: mapView}'><a href='#/mapa'><i class='glyphicon glyphicon-globe'></i> Mapa</a></li>
+            <li ng-class='{active: !mapView}'><a href='#/'><i class='glyphicon glyphicon-signal'></i> Estatística</a></li>
         </div>        
         <div class="nav navbar-nav navbar-right" ng-if='!user_data'>
             <li class=''><a href='' data-toggle="modal" data-target="#loginModal"><i class='glyphicon glyphicon-user'></i> Login</a></li>
