adding tooltip to gaugue graphs

--- a/app/views/partials/gaugePanel.html
+++ b/app/views/partials/gaugePanel.html
@@ -6,6 +6,6 @@
 		<div id='{{gaugeId}}'></div>
 	</div>
 	<div class="gauge-footer">
-		<p class="gauge-title"> {{object.title}}</p>
+		<p class="gauge-title" data-toggle="tooltip" title="{{object.tooltip}}"> {{object.title}}</p>
 	</div>
 </div>
